# house-regressor

./: .flake8  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  test_data.csv.dvc  train_data.csv.dvc  train_labels.csv.dvc
house_regressor/: api.py  cli.py  training.py  utils.py
src/house_regressor/: __init__.py  cli.py  training.py  utils.py
tests/: __init__.py
