[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
license = "Apache-2.0"
name = "house-regressor"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dvc = "^3"
dvc-s3 = "^3"
evidently = "^0.4"
fastapi = "^0.110"
mlflow = "^2"
pandas = "^2"
python = "^3.10"
scikit-learn = "^1"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-new-union-types = "*"
flake8-pep585 = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"

[tool.poetry.scripts]
house-regressor = "house_regressor.cli:main"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pylint."MASTER"]
jobs = 0
load-plugins = "pylint.extensions.docparams"

[tool.pylint."MESSAGES CONTROL"]
disable = "all"
enable = ["missing-param-doc", "differing-param-doc", "differing-type-doc", "missing-return-doc"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
